--- a/index.html
+++ b/index.html
@@ -584,8 +584,14 @@ Host: localhost:8080</code></pre>
 </div>
 <div class="sect3">
 <h4 id="_http_response_3"><a class="link" href="#_http_response_3">HTTP response</a></h4>
-<div class="paragraph">
-<p>in/clude::../../../build/generated-snippets/get member tier/http-response.adoc[]</p>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
+Content-Type: application/json;charset=UTF-8
+Content-Length: 8
+
+"MASTER"</code></pre>
+</div>
 </div>
 </div>
 </div>
@@ -769,7 +775,7 @@ Content-Length: 390
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-02-06 00:15:41 +0900
+Last updated 2023-02-06 00:57:15 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
