--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ Host: localhost:8080</code></pre>
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 174
+Content-Length: 192
 
 {
   "id" : 1,
@@ -564,7 +564,8 @@ Content-Length: 174
   "commits" : 100,
   "tier" : "SILVER",
   "authStep" : "NONE",
-  "profileImage" : "http://abcd.efgh"
+  "profileImage" : "http://abcd.efgh",
+  "rank" : 1000
 }</code></pre>
 </div>
 </div>
@@ -622,7 +623,7 @@ Host: localhost:8080</code></pre>
 <h4 id="_http_request_5"><a class="link" href="#_http_request_5">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/members/ranking?page=0&size=20&sort=commits,DESC HTTP/1.1
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/members/ranking?page=0&amp;size=20&amp;sort=commits,DESC HTTP/1.1
 Content-Type: application/json;charset=UTF-8
 Host: localhost:8080</code></pre>
 </div>
@@ -775,7 +776,7 @@ Content-Length: 390
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-02-06 00:57:15 +0900
+Last updated 2023-02-12 20:08:41 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
