--- a/index.html
+++ b/index.html
@@ -478,14 +478,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_http_response_5">HTTP response</a></li>
 </ul>
 </li>
+<li><a href="#_멤버_지갑_주소_갱신">멤버 지갑 주소 갱신</a>
+<ul class="sectlevel3">
+<li><a href="#_http_request_6">HTTP request</a></li>
+<li><a href="#_http_response_6">HTTP response</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#_search_result">Search Result</a>
 <ul class="sectlevel2">
 <li><a href="#_검색에_대한_결과_조회">검색에 대한 결과 조회</a>
 <ul class="sectlevel3">
-<li><a href="#_http_request_6">HTTP request</a></li>
-<li><a href="#_http_response_6">HTTP response</a></li>
+<li><a href="#_http_request_7">HTTP request</a></li>
+<li><a href="#_http_response_7">HTTP response</a></li>
 </ul>
 </li>
 </ul>
@@ -494,8 +500,26 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel2">
 <li><a href="#_레포_구성원_기여정도_조회">레포 구성원 기여정도 조회</a>
 <ul class="sectlevel3">
-<li><a href="#_http_request_7">HTTP request</a></li>
-<li><a href="#_http_response_7">HTTP response</a></li>
+<li><a href="#_http_request_8">HTTP request</a></li>
+<li><a href="#_http_response_8">HTTP response</a></li>
+</ul>
+</li>
+<li><a href="#_두_레포의_구성원_기여정도_비교_조회">두 레포의 구성원 기여정도 비교 조회</a>
+<ul class="sectlevel3">
+<li><a href="#_http_request_9">HTTP request</a></li>
+<li><a href="#_http_response_9">HTTP response</a></li>
+</ul>
+</li>
+<li><a href="#_두_기여자의_기여정도_비교_조회">두 기여자의 기여정도 비교 조회</a>
+<ul class="sectlevel3">
+<li><a href="#_http_request_10">HTTP request</a></li>
+<li><a href="#_http_response_10">HTTP response</a></li>
+</ul>
+</li>
+<li><a href="#_두_레포_비교">두 레포 비교</a>
+<ul class="sectlevel3">
+<li><a href="#_http_request_11">HTTP request</a></li>
+<li><a href="#_http_response_11">HTTP response</a></li>
 </ul>
 </li>
 </ul>
@@ -555,7 +579,7 @@ Host: localhost:8080</code></pre>
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 192
+Content-Length: 217
 
 {
   "id" : 1,
@@ -565,7 +589,8 @@ Content-Length: 192
   "tier" : "SILVER",
   "authStep" : "NONE",
   "profileImage" : "http://abcd.efgh",
-  "rank" : 1000
+  "rank" : 1000,
+  "tokenAmount" : 1000
 }</code></pre>
 </div>
 </div>
@@ -635,39 +660,66 @@ Host: localhost:8080</code></pre>
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 536
+Content-Length: 531
 
 [ {
   "id" : 1,
   "name" : "Kim",
   "githubId" : "ohksj77",
-  "commits" : 10000,
+  "tokens" : 10000,
   "tier" : "MASTER"
 }, {
   "id" : 2,
   "name" : "Seung",
   "githubId" : "ohksj",
-  "commits" : 5000,
+  "tokens" : 5000,
   "tier" : "RUBY"
 }, {
   "id" : 3,
   "name" : "Jin",
   "githubId" : "ohksj777",
-  "commits" : 3000,
+  "tokens" : 3000,
   "tier" : "DIAMOND"
 }, {
   "id" : 4,
   "name" : "Lee",
   "githubId" : "ohksjj",
-  "commits" : 1000,
+  "tokens" : 1000,
   "tier" : "PLATINUM"
 }, {
   "id" : 5,
   "name" : "Da",
   "githubId" : "ohksjksj",
-  "commits" : 500,
+  "tokens" : 500,
   "tier" : "GOLD"
 } ]</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_멤버_지갑_주소_갱신"><a class="link" href="#_멤버_지갑_주소_갱신">멤버 지갑 주소 갱신</a></h3>
+<div class="sect3">
+<h4 id="_http_request_6"><a class="link" href="#_http_request_6">HTTP request</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/members/wallet-address HTTP/1.1
+Content-Type: application/json;charset=UTF-8
+Content-Length: 57
+Host: localhost:8080
+
+{
+  "id" : 1,
+  "walletAddress" : "asdfasdf12341234"
+}</code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_http_response_6"><a class="link" href="#_http_response_6">HTTP response</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK</code></pre>
 </div>
 </div>
 </div>
@@ -680,7 +732,7 @@ Content-Length: 536
 <div class="sect2">
 <h3 id="_검색에_대한_결과_조회"><a class="link" href="#_검색에_대한_결과_조회">검색에 대한 결과 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_6"><a class="link" href="#_http_request_6">HTTP request</a></h4>
+<h4 id="_http_request_7"><a class="link" href="#_http_request_7">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/search?page=1&amp;name=gitrank&amp;type=repositories HTTP/1.1
@@ -690,32 +742,14 @@ Host: localhost:8080</code></pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_6"><a class="link" href="#_http_response_6">HTTP response</a></h4>
+<h4 id="_http_response_7"><a class="link" href="#_http_response_7">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 287
+Content-Length: 3
 
-[ {
-  "id" : "1234",
-  "name" : "ohksj77"
-}, {
-  "id" : "5678",
-  "name" : "HJ39"
-}, {
-  "id" : "8765",
-  "name" : "posite"
-}, {
-  "id" : "aaaa",
-  "name" : "Sammuelwoojae"
-}, {
-  "id" : "bbbb",
-  "name" : "And"
-}, {
-  "id" : "cccc",
-  "name" : "DragonGuard-JinJin"
-} ]</code></pre>
+[ ]</code></pre>
 </div>
 </div>
 </div>
@@ -728,7 +762,7 @@ Content-Length: 287
 <div class="sect2">
 <h3 id="_레포_구성원_기여정도_조회"><a class="link" href="#_레포_구성원_기여정도_조회">레포 구성원 기여정도 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_7"><a class="link" href="#_http_request_7">HTTP request</a></h4>
+<h4 id="_http_request_8"><a class="link" href="#_http_request_8">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/git-repos?name=tukcom2023CD/DragonGuard-JinJin HTTP/1.1
@@ -738,35 +772,252 @@ Host: localhost:8080</code></pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_7"><a class="link" href="#_http_response_7">HTTP response</a></h4>
+<h4 id="_http_response_8"><a class="link" href="#_http_response_8">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 390
+Content-Length: 3
 
-[ {
-  "githubId" : "ohksj77",
-  "commits" : 100,
-  "additions" : 1000,
-  "deletions" : 500
-}, {
-  "githubId" : "HJ39",
-  "commits" : 101,
-  "additions" : 999,
-  "deletions" : 500
-}, {
-  "githubId" : "posite",
-  "commits" : 99,
-  "additions" : 1001,
-  "deletions" : 500
-}, {
-  "githubId" : "Sammuelwoojae",
-  "commits" : 100,
-  "additions" : 1001,
-  "deletions" : 499
-} ]</code></pre>
+[ ]</code></pre>
 </div>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_두_레포의_구성원_기여정도_비교_조회"><a class="link" href="#_두_레포의_구성원_기여정도_비교_조회">두 레포의 구성원 기여정도 비교 조회</a></h3>
+<div class="sect3">
+<h4 id="_http_request_9"><a class="link" href="#_http_request_9">HTTP request</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/git-repos/compare/git-repos-members HTTP/1.1
+Content-Type: application/json;charset=UTF-8
+Content-Length: 90
+Host: localhost:8080
+
+{
+  "firstRepo" : "tukcom2023CD/DragonGuard-JinJin",
+  "secondRepo" : "tukcom2023CD/"
+}</code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_http_response_9"><a class="link" href="#_http_response_9">HTTP response</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
+Content-Type: application/json;charset=UTF-8
+Content-Length: 906
+
+{
+  "firstResult" : [ {
+    "githubId" : "ohksj77",
+    "commits" : 100,
+    "additions" : 1000,
+    "deletions" : 500
+  }, {
+    "githubId" : "HJ39",
+    "commits" : 101,
+    "additions" : 999,
+    "deletions" : 500
+  }, {
+    "githubId" : "posite",
+    "commits" : 99,
+    "additions" : 1001,
+    "deletions" : 500
+  }, {
+    "githubId" : "Sammuelwoojae",
+    "commits" : 100,
+    "additions" : 1001,
+    "deletions" : 499
+  } ],
+  "secondResult" : [ {
+    "githubId" : "ohksj77",
+    "commits" : 100,
+    "additions" : 1000,
+    "deletions" : 500
+  }, {
+    "githubId" : "HJ39",
+    "commits" : 101,
+    "additions" : 999,
+    "deletions" : 500
+  }, {
+    "githubId" : "posite",
+    "commits" : 99,
+    "additions" : 1001,
+    "deletions" : 500
+  }, {
+    "githubId" : "Sammuelwoojae",
+    "commits" : 100,
+    "additions" : 1001,
+    "deletions" : 499
+  } ]
+}</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_두_기여자의_기여정도_비교_조회"><a class="link" href="#_두_기여자의_기여정도_비교_조회">두 기여자의 기여정도 비교 조회</a></h3>
+<div class="sect3">
+<h4 id="_http_request_10"><a class="link" href="#_http_request_10">HTTP request</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/git-repos/compare/members HTTP/1.1
+Content-Type: application/json;charset=UTF-8
+Content-Length: 145
+Host: localhost:8080
+
+{
+  "firstName" : "ohksj77",
+  "firstRepo" : "tukcom2023CD/DragonGuard-JinJin",
+  "secondName" : "ohksj",
+  "secondRepo" : "tukcom2023CD/"
+}</code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_http_response_10"><a class="link" href="#_http_response_10">HTTP response</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
+Content-Type: application/json;charset=UTF-8
+Content-Length: 54
+
+{
+  "firstMember" : null,
+  "secondMember" : null
+}</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_두_레포_비교"><a class="link" href="#_두_레포_비교">두 레포 비교</a></h3>
+<div class="sect3">
+<h4 id="_http_request_11"><a class="link" href="#_http_request_11">HTTP request</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/git-repos/compare HTTP/1.1
+Content-Type: application/json;charset=UTF-8
+Content-Length: 90
+Host: localhost:8080
+
+{
+  "firstRepo" : "tukcom2023CD/DragonGuard-JinJin",
+  "secondRepo" : "tukcom2023CD/"
+}</code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_http_response_11"><a class="link" href="#_http_response_11">HTTP response</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
+Content-Type: application/json;charset=UTF-8
+Content-Length: 2046
+
+{
+  "firstRepo" : {
+    "gitRepo" : {
+      "full_name" : "tukcom2023CD/DragonGuard-JinJin",
+      "forks_count" : 1,
+      "stargazers_count" : 4,
+      "watchers_count" : 4,
+      "open_issues_count" : 3,
+      "closed_issues_count" : 23,
+      "subscribers_count" : 0
+    },
+    "statistics" : {
+      "commitStats" : {
+        "count" : 4,
+        "sum" : 430,
+        "min" : 33,
+        "max" : 146,
+        "average" : 107.5
+      },
+      "additionStats" : {
+        "count" : 4,
+        "sum" : 50000,
+        "min" : 1800,
+        "max" : 30000,
+        "average" : 12500.0
+      },
+      "deletionStats" : {
+        "count" : 4,
+        "sum" : 30000,
+        "min" : 5000,
+        "max" : 15000,
+        "average" : 7500.0
+      }
+    },
+    "languages" : {
+      "swift" : 9998,
+      "java" : 10000,
+      "kotlin" : 9999
+    },
+    "languagesStats" : {
+      "count" : 4,
+      "sum" : 29997,
+      "min" : 9998,
+      "max" : 10000,
+      "average" : 7499.25
+    }
+  },
+  "secondRepo" : {
+    "gitRepo" : {
+      "full_name" : "tukcom2023CD/",
+      "forks_count" : 1,
+      "stargazers_count" : 4,
+      "watchers_count" : 4,
+      "open_issues_count" : 3,
+      "closed_issues_count" : 23,
+      "subscribers_count" : 0
+    },
+    "statistics" : {
+      "commitStats" : {
+        "count" : 4,
+        "sum" : 430,
+        "min" : 33,
+        "max" : 146,
+        "average" : 107.5
+      },
+      "additionStats" : {
+        "count" : 4,
+        "sum" : 50000,
+        "min" : 1800,
+        "max" : 30000,
+        "average" : 12500.0
+      },
+      "deletionStats" : {
+        "count" : 4,
+        "sum" : 30000,
+        "min" : 5000,
+        "max" : 15000,
+        "average" : 7500.0
+      }
+    },
+    "languages" : {
+      "swift" : 9998,
+      "java" : 10000,
+      "kotlin" : 9999
+    },
+    "languagesStats" : {
+      "count" : 4,
+      "sum" : 29997,
+      "min" : 9998,
+      "max" : 10000,
+      "average" : 7499.25
+    }
+  }
+}</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Unresolved directive in index.adoc - include::../src/docs/asciidoc/blockchain.adoc[]</p>
 </div>
 </div>
 </div>
@@ -776,7 +1027,7 @@ Content-Length: 390
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-02-12 20:08:41 +0900
+Last updated 2023-02-25 18:17:09 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
