chore: rename api

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_http_response_10">HTTP response</a></li>
 </ul>
 </li>
-<li><a href="#_두_레포_비교">두 레포 비교</a>
+<li><a href="#_두_레포_비교_조회">두 레포 비교 조회</a>
 <ul class="sectlevel3">
 <li><a href="#_http_request_11">HTTP request</a></li>
 <li><a href="#_http_response_11">HTTP response</a></li>
@@ -935,7 +935,7 @@ Content-Length: 254
 </div>
 </div>
 <div class="sect2">
-<h3 id="_두_레포_비교"><a class="link" href="#_두_레포_비교">두 레포 비교</a></h3>
+<h3 id="_두_레포_비교_조회"><a class="link" href="#_두_레포_비교_조회">두 레포 비교 조회</a></h3>
 <div class="sect3">
 <h4 id="_http_request_11"><a class="link" href="#_http_request_11">HTTP request</a></h4>
 <div class="listingblock">
@@ -995,8 +995,8 @@ Content-Length: 2046
       }
     },
     "languages" : {
-      "kotlin" : 9999,
       "swift" : 9998,
+      "kotlin" : 9999,
       "java" : 10000
     },
     "languagesStats" : {
@@ -1041,8 +1041,8 @@ Content-Length: 2046
       }
     },
     "languages" : {
-      "kotlin" : 9999,
       "swift" : 9998,
+      "kotlin" : 9999,
       "java" : 10000
     },
     "languagesStats" : {
@@ -1106,7 +1106,7 @@ Content-Length: 229
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-02-25 18:32:32 +0900
+Last updated 2023-02-25 18:39:36 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
