--- a/index.html
+++ b/index.html
@@ -494,32 +494,38 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_http_response_7">HTTP response</a></li>
 </ul>
 </li>
+<li><a href="#_필터링을_통한_검색에_대한_결과_조회">필터링을 통한 검색에 대한 결과 조회</a>
+<ul class="sectlevel3">
+<li><a href="#_http_request_8">HTTP request</a></li>
+<li><a href="#_http_response_8">HTTP response</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#_github_repository">Github Repository</a>
 <ul class="sectlevel2">
 <li><a href="#_레포_구성원_기여정도_조회">레포 구성원 기여정도 조회</a>
 <ul class="sectlevel3">
-<li><a href="#_http_request_8">HTTP request</a></li>
-<li><a href="#_http_response_8">HTTP response</a></li>
-</ul>
-</li>
-<li><a href="#_두_레포의_구성원_기여정도_비교_조회">두 레포의 구성원 기여정도 비교 조회</a>
-<ul class="sectlevel3">
 <li><a href="#_http_request_9">HTTP request</a></li>
 <li><a href="#_http_response_9">HTTP response</a></li>
 </ul>
 </li>
-<li><a href="#_두_기여자의_기여정도_비교_조회">두 기여자의 기여정도 비교 조회</a>
+<li><a href="#_두_레포의_구성원_기여정도_비교_조회">두 레포의 구성원 기여정도 비교 조회</a>
 <ul class="sectlevel3">
 <li><a href="#_http_request_10">HTTP request</a></li>
 <li><a href="#_http_response_10">HTTP response</a></li>
 </ul>
 </li>
-<li><a href="#_두_레포_비교_조회">두 레포 비교 조회</a>
+<li><a href="#_두_기여자의_기여정도_비교_조회">두 기여자의 기여정도 비교 조회</a>
 <ul class="sectlevel3">
 <li><a href="#_http_request_11">HTTP request</a></li>
 <li><a href="#_http_response_11">HTTP response</a></li>
+</ul>
+</li>
+<li><a href="#_두_레포_비교_조회">두 레포 비교 조회</a>
+<ul class="sectlevel3">
+<li><a href="#_http_request_12">HTTP request</a></li>
+<li><a href="#_http_response_12">HTTP response</a></li>
 </ul>
 </li>
 </ul>
@@ -528,8 +534,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel2">
 <li><a href="#_블록체인_부여_기록_리스트_조회">블록체인 부여 기록 리스트 조회</a>
 <ul class="sectlevel3">
-<li><a href="#_http_request_12">HTTP request</a></li>
-<li><a href="#_http_response_12">HTTP response</a></li>
+<li><a href="#_http_request_13">HTTP request</a></li>
+<li><a href="#_http_response_13">HTTP response</a></li>
 </ul>
 </li>
 </ul>
@@ -757,25 +763,68 @@ Host: localhost:8080</code></pre>
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 287
+Content-Length: 257
 
 [ {
-  "id" : "1234",
+  "id" : 1,
   "name" : "ohksj77"
 }, {
-  "id" : "5678",
+  "id" : 2,
   "name" : "HJ39"
 }, {
-  "id" : "8765",
+  "id" : 3,
   "name" : "posite"
 }, {
-  "id" : "aaaa",
+  "id" : 4,
   "name" : "Sammuelwoojae"
 }, {
-  "id" : "bbbb",
+  "id" : 5,
   "name" : "And"
 }, {
-  "id" : "cccc",
+  "id" : 6,
+  "name" : "DragonGuard-JinJin"
+} ]</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_필터링을_통한_검색에_대한_결과_조회"><a class="link" href="#_필터링을_통한_검색에_대한_결과_조회">필터링을 통한 검색에 대한 결과 조회</a></h3>
+<div class="sect3">
+<h4 id="_http_request_8"><a class="link" href="#_http_request_8">HTTP request</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/search?page=1&amp;name=gitrank&amp;type=REPOSITORIES&amp;filters=language:swift,language:kotlin,language:java HTTP/1.1
+Content-Type: application/json;charset=UTF-8
+Host: localhost:8080</code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_http_response_8"><a class="link" href="#_http_response_8">HTTP response</a></h4>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
+Content-Type: application/json;charset=UTF-8
+Content-Length: 257
+
+[ {
+  "id" : 1,
+  "name" : "ohksj77"
+}, {
+  "id" : 2,
+  "name" : "HJ39"
+}, {
+  "id" : 3,
+  "name" : "posite"
+}, {
+  "id" : 4,
+  "name" : "Sammuelwoojae"
+}, {
+  "id" : 5,
+  "name" : "And"
+}, {
+  "id" : 6,
   "name" : "DragonGuard-JinJin"
 } ]</code></pre>
 </div>
@@ -790,7 +839,7 @@ Content-Length: 287
 <div class="sect2">
 <h3 id="_레포_구성원_기여정도_조회"><a class="link" href="#_레포_구성원_기여정도_조회">레포 구성원 기여정도 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_8"><a class="link" href="#_http_request_8">HTTP request</a></h4>
+<h4 id="_http_request_9"><a class="link" href="#_http_request_9">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/git-repos?name=tukcom2023CD/DragonGuard-JinJin HTTP/1.1
@@ -800,7 +849,7 @@ Host: localhost:8080</code></pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_8"><a class="link" href="#_http_response_8">HTTP response</a></h4>
+<h4 id="_http_response_9"><a class="link" href="#_http_response_9">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
@@ -835,7 +884,7 @@ Content-Length: 390
 <div class="sect2">
 <h3 id="_두_레포의_구성원_기여정도_비교_조회"><a class="link" href="#_두_레포의_구성원_기여정도_비교_조회">두 레포의 구성원 기여정도 비교 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_9"><a class="link" href="#_http_request_9">HTTP request</a></h4>
+<h4 id="_http_request_10"><a class="link" href="#_http_request_10">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/git-repos/compare/git-repos-members HTTP/1.1
@@ -851,7 +900,7 @@ Host: localhost:8080
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_9"><a class="link" href="#_http_response_9">HTTP response</a></h4>
+<h4 id="_http_response_10"><a class="link" href="#_http_response_10">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
@@ -909,7 +958,7 @@ Content-Length: 906
 <div class="sect2">
 <h3 id="_두_기여자의_기여정도_비교_조회"><a class="link" href="#_두_기여자의_기여정도_비교_조회">두 기여자의 기여정도 비교 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_10"><a class="link" href="#_http_request_10">HTTP request</a></h4>
+<h4 id="_http_request_11"><a class="link" href="#_http_request_11">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/git-repos/compare/members HTTP/1.1
@@ -927,7 +976,7 @@ Host: localhost:8080
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_10"><a class="link" href="#_http_response_10">HTTP response</a></h4>
+<h4 id="_http_response_11"><a class="link" href="#_http_response_11">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
@@ -955,7 +1004,7 @@ Content-Length: 254
 <div class="sect2">
 <h3 id="_두_레포_비교_조회"><a class="link" href="#_두_레포_비교_조회">두 레포 비교 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_11"><a class="link" href="#_http_request_11">HTTP request</a></h4>
+<h4 id="_http_request_12"><a class="link" href="#_http_request_12">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">POST /api/git-repos/compare HTTP/1.1
@@ -971,7 +1020,7 @@ Host: localhost:8080
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_11"><a class="link" href="#_http_response_11">HTTP response</a></h4>
+<h4 id="_http_response_12"><a class="link" href="#_http_response_12">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
@@ -1084,7 +1133,7 @@ Content-Length: 2046
 <div class="sect2">
 <h3 id="_블록체인_부여_기록_리스트_조회"><a class="link" href="#_블록체인_부여_기록_리스트_조회">블록체인 부여 기록 리스트 조회</a></h3>
 <div class="sect3">
-<h4 id="_http_request_12"><a class="link" href="#_http_request_12">HTTP request</a></h4>
+<h4 id="_http_request_13"><a class="link" href="#_http_request_13">HTTP request</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">GET /api/blockchain/1 HTTP/1.1
@@ -1094,7 +1143,7 @@ Host: localhost:8080</code></pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="_http_response_12"><a class="link" href="#_http_response_12">HTTP response</a></h4>
+<h4 id="_http_response_13"><a class="link" href="#_http_response_13">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
@@ -1124,7 +1173,7 @@ Content-Length: 229
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-03-05 16:15:22 +0900
+Last updated 2023-03-07 13:20:06 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
