feat: fix id response

--- a/index.html
+++ b/index.html
@@ -570,9 +570,11 @@ Host: localhost:8080
 <div class="content">
 <pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
-Content-Length: 1
+Content-Length: 16
 
-1</code></pre>
+{
+  "id" : 1
+}</code></pre>
 </div>
 </div>
 </div>
@@ -1062,9 +1064,9 @@ Content-Length: 2046
       }
     },
     "languages" : {
+      "swift" : 9998,
       "java" : 10000,
-      "kotlin" : 9999,
-      "swift" : 9998
+      "kotlin" : 9999
     },
     "languagesStats" : {
       "count" : 4,
@@ -1108,9 +1110,9 @@ Content-Length: 2046
       }
     },
     "languages" : {
+      "swift" : 9998,
       "java" : 10000,
-      "kotlin" : 9999,
-      "swift" : 9998
+      "kotlin" : 9999
     },
     "languagesStats" : {
       "count" : 4,
@@ -1173,7 +1175,7 @@ Content-Length: 229
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-03-07 13:20:06 +0900
+Last updated 2023-03-08 17:19:03 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
