chore: add id response to add member to organization api

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@ Content-Type: application/json;charset=UTF-8
 Content-Length: 53
 
 {
-  "id" : "1243cafe-5fcb-44b2-ae13-0a793acbdeb8"
+  "id" : "6a4e7278-eedc-4941-80a9-f8bba40091e9"
 }</code></pre>
 </div>
 </div>
@@ -734,31 +734,31 @@ Content-Type: application/json;charset=UTF-8
 Content-Length: 716
 
 [ {
-  "id" : "b0821abd-0303-419d-9c2b-42a5f3be47af",
+  "id" : "ab3e3e31-0a4b-4ef2-9f48-677103c8b0d8",
   "name" : "Kim",
   "githubId" : "ohksj77",
   "tokens" : 10000,
   "tier" : "MASTER"
 }, {
-  "id" : "f64c5bf4-db6e-4b23-816d-f0eb3bebca5b",
+  "id" : "5d84a3b1-5479-47dd-bc46-448d6a1c7f0d",
   "name" : "Seung",
   "githubId" : "ohksj",
   "tokens" : 5000,
   "tier" : "RUBY"
 }, {
-  "id" : "78213b2a-afb6-4fe5-b37d-a8970cce1a92",
+  "id" : "662b5f19-c9f6-4459-9575-0992701b227f",
   "name" : "Jin",
   "githubId" : "ohksj777",
   "tokens" : 3000,
   "tier" : "DIAMOND"
 }, {
-  "id" : "46645116-5b76-49f4-bc1f-757a867208b1",
+  "id" : "4c3cc10c-d8d8-41e0-9775-c9b9226dab62",
   "name" : "Lee",
   "githubId" : "ohksjj",
   "tokens" : 1000,
   "tier" : "PLATINUM"
 }, {
-  "id" : "d0ae4d0a-3f26-4351-a596-8b98a382c627",
+  "id" : "c0cf01fb-84c1-42b0-9151-e0f885fef2ca",
   "name" : "Da",
   "githubId" : "ohksjksj",
   "tokens" : 500,
@@ -816,25 +816,25 @@ Content-Type: application/json;charset=UTF-8
 Content-Length: 601
 
 [ {
-  "id" : "dfe5d330-cbe4-4b9d-9de5-a52605b51790",
+  "id" : "5363529b-48eb-4bf6-8f3b-16c5ec04a886",
   "name" : "정해진",
   "githubId" : "HJ39",
   "tokens" : 20,
   "tier" : "SPROUT"
 }, {
-  "id" : "25ad8c49-e436-4653-8f51-e433eeaccb71",
+  "id" : "9f752c01-d469-4d37-bb6e-9ba2ce4f5e1f",
   "name" : "넓은관용",
   "githubId" : "Sammuelwoojae",
   "tokens" : 20,
   "tier" : "SPROUT"
 }, {
-  "id" : "eee23dd3-abf0-4898-b8d0-82a72a942f43",
+  "id" : "be2141b7-2704-42cf-bce1-235549c210e9",
   "name" : "회사승진",
   "githubId" : "ohksj77",
   "tokens" : 20,
   "tier" : "SPROUT"
 }, {
-  "id" : "3411b3e0-e828-42fe-91a6-370858b3f28b",
+  "id" : "1accabe7-46ac-4738-bf95-a08330c80393",
   "name" : "영어수학",
   "githubId" : "posite",
   "tokens" : 20,
@@ -865,7 +865,7 @@ Content-Type: application/json;charset=UTF-8
 Content-Length: 302
 
 {
-  "id" : "85020efb-6c77-46c4-9790-21d5f019e1b1",
+  "id" : "d63a937a-c35e-49d3-9b05-48228c56a481",
   "name" : "KimSeungjin",
   "githubId" : "ohksj77",
   "commits" : 1000,
@@ -1302,13 +1302,13 @@ Content-Length: 303
   "contributeType" : "COMMIT",
   "amount" : 10,
   "githubId" : "ohksj77",
-  "memberId" : "1eed957f-3ad1-4c0d-b30a-6f34f2cc0418"
+  "memberId" : "56f5a090-b29b-4935-8342-aa8518bb0e59"
 }, {
   "id" : 2,
   "contributeType" : "COMMIT",
   "amount" : 5,
   "githubId" : "ohksj77",
-  "memberId" : "7122065e-78d6-4bed-9045-030e8ce81304"
+  "memberId" : "7c412d50-8dbd-4ff3-9151-007712eb731e"
 } ]</code></pre>
 </div>
 </div>
@@ -1524,7 +1524,13 @@ Host: localhost:8080
 <h4 id="_http_response_21"><a class="link" href="#_http_response_21">HTTP response</a></h4>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK</code></pre>
+<pre class="highlightjs highlight nowrap"><code data-lang="http" class="language-http hljs">HTTP/1.1 200 OK
+Content-Type: application/json;charset=UTF-8
+Content-Length: 16
+
+{
+  "id" : 1
+}</code></pre>
 </div>
 </div>
 </div>
@@ -1699,7 +1705,7 @@ Content-Length: 367
 <div id="footer">
 <div id="footer-text">
 Version 0.0.1-SNAPSHOT<br>
-Last updated 2023-03-26 20:59:18 +0900
+Last updated 2023-03-29 21:18:16 +0900
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
