--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_http_response_7">HTTP response</a></li>
 </ul>
 </li>
-<li><a href="#_멤버_프로필_상세_조회">멤버 프로필 상세 조회</a>
+<li><a href="#_멤버_github_조직_및_레포_목록_조회">멤버 github 조직 및 레포 목록 조회</a>
 <ul class="sectlevel3">
 <li><a href="#_http_request_8">HTTP request</a></li>
 <li><a href="#_http_response_8">HTTP response</a></li>
@@ -500,7 +500,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_http_response_9">HTTP response</a></li>
 </ul>
 </li>
-<li><a href="#_멤버_gitorganization의_레포_목록_조회">멤버 GitOrganization의 레포 목록 조회</a>
+<li><a href="#_멤버_github_조직의_레포_목록_조회">멤버 github 조직의 레포 목록 조회</a>
 <ul class="sectlevel3">
 <li><a href="#_http_request_10">HTTP request</a></li>
 <li><a href="#_http_response_10">HTTP response</a></li>
@@ -926,7 +926,7 @@ Content-Length: 503
 </div>
 </div>
 <div class="sect2">
-<h3 id="_멤버_프로필_상세_조회"><a class="link" href="#_멤버_프로필_상세_조회">멤버 프로필 상세 조회</a></h3>
+<h3 id="_멤버_github_조직_및_레포_목록_조회"><a class="link" href="#_멤버_github_조직_및_레포_목록_조회">멤버 github 조직 및 레포 목록 조회</a></h3>
 <div class="sect3">
 <h4 id="_http_request_8"><a class="link" href="#_http_request_8">HTTP request</a></h4>
 <div class="listingblock">
@@ -977,7 +977,7 @@ Host: localhost:8080</code></pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_멤버_gitorganization의_레포_목록_조회"><a class="link" href="#_멤버_gitorganization의_레포_목록_조회">멤버 GitOrganization의 레포 목록 조회</a></h3>
+<h3 id="_멤버_github_조직의_레포_목록_조회"><a class="link" href="#_멤버_github_조직의_레포_목록_조회">멤버 github 조직의 레포 목록 조회</a></h3>
 <div class="sect3">
 <h4 id="_http_request_10"><a class="link" href="#_http_request_10">HTTP request</a></h4>
 <div class="listingblock">
